--- a/Dockerfile/Frontend/Dockerfile
+++ b/Dockerfile/Frontend/Dockerfile
@@ -6,8 +6,7 @@ RUN rm -rf ./*
 
 COPY ./ .
 
-#RUN echo VITE_base_url='$API_URL_QA' > ./.env
-RUN echo VITE_base_url="https://miranda-back-qa.azurewebsites.net" > ./.env
+RUN echo VITE_base_url='$API_URL_QA' > ./.env
 
 EXPOSE 80
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
