--- a/Dockerfile/Frontend/Dockerfile
+++ b/Dockerfile/Frontend/Dockerfile
@@ -6,7 +6,7 @@ RUN rm -rf ./*
 
 COPY ./ .
 
-RUN echo '{ "apiUrl":\"'$API_URL'\" }' > ./config.json
+CMD sh -c echo '{ "apiUrl":"'$API_URL'" }' > ./config.json
 
 EXPOSE 80
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
