--- a/Dockerfile/Frontend/Dockerfile
+++ b/Dockerfile/Frontend/Dockerfile
@@ -6,7 +6,8 @@ RUN rm -rf ./*
 
 COPY ./ .
 
-CMD sh -c echo '{ "apiUrl":"'$API_URL'" }' > ./config.json
+#CMD sh -c echo '{ "apiUrl":"'$API_URL'" }' > ./config.json
+CMD sh -c echo '{ "apiUrl":"https://miranda-back-qa.azurewebsites.net" }' > ./config.json
 
 EXPOSE 80
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
