Corrected Dockerfile command

--- a/Dockerfile/Frontend/Dockerfile
+++ b/Dockerfile/Frontend/Dockerfile
@@ -11,4 +11,4 @@ COPY ./ .
 
 EXPOSE 80
 #ENTRYPOINT ["nginx", "-g", "daemon off;"]
-CMD sh -c echo '{ "apiUrl":"https://miranda-back-qa.azurewebsites.net" }' > /usr/share/nginx/html/config.json && nginx -g "daemon off;"'
+CMD ["/bin/sh", "-c", "echo '{ \"apiUrl\":\"https://miranda-back-qa.azurewebsites.net\" }' > /usr/share/nginx/html/config.json && nginx -g 'daemon off;'"]
