--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -340,3 +340,28 @@ stages:
               # Set environment variables
               az webapp config appsettings set --name $(frontAppServiceQA) --resource-group $(ResourceGroupName) \
                 --settings API_URL="$(api_url_qa)" \
+
+# -------------------------------------------------------------------------------
+# |           RUN INTEGRATION TESTS ON AZURE APP SERVICES                       |
+# -------------------------------------------------------------------------------
+    - job: RunCypressTests
+      displayName: 'Run Cypress Integration Tests'
+      dependsOn: [DeployFrontImageToAppServiceQA, DeployAPIImageToAppServiceQA]
+      condition: succeeded()
+      steps:
+        - script: npm install ts-node typescript --save-dev
+          displayName: 'Install typescript'
+          workingDirectory: '$(frontPath)'
+
+        - script: npx cypress run --env apiUrl=$(api_url_as_qa),homeUrl=$(front_url_as_qa)
+          workingDirectory: '$(frontPath)'
+          displayName: 'Run integration tests'
+          continueOnError: true
+        
+        - task: PublishTestResults@2
+          inputs:
+            testResultsFormat: 'JUnit'
+            testResultsFiles: '*.xml'
+            searchFolder: '$(frontPath)/cypress/results'
+            testRunTitle: 'Cypress App Services Tests'
+            failTaskOnFailedTests: true
