--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -293,70 +293,78 @@ stages:
 # -------------------------------------------------------------------------------
 # |               DEPLOY API TO AZURE APP SERVICE                               |
 # -------------------------------------------------------------------------------
-    - job: DeployAPIImageToAppServiceQA
+    - deployment: DeployAPIImageToAppServiceQA
       displayName: 'Deploy API to Azure App Service (QA)'
       pool:
         vmImage: 'ubuntu-latest'
-      steps:
-        - task: AzureCLI@2
-          displayName: 'Create API Azure App Service resource and configure image'
-          inputs:
-            azureSubscription: '$(ConnectedServiceName)'
-            scriptType: 'bash'
-            scriptLocation: 'inlineScript'
-            inlineScript: |
-              # Check if API App Service already exists
-              if ! az webapp list --query "[?name=='$(backAppServiceQA)' && resourceGroup=='$(ResourceGroupName)'] | length(@)" -o tsv | grep -q '^1$'; then
-                echo "API App Service doesn't exist. Creating new..."
-                # Create App Service without specifying container image
-                az webapp create --resource-group $(ResourceGroupName) --plan $(AppServicePlanLinux) --name $(backAppServiceQA) --deployment-container-image-name "nginx"  # Especifica una imagen temporal para permitir la creación
-              else
-                echo "API App Service already exists. Updating image..."
-              fi
+      environment: 'qa'
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+            - task: AzureCLI@2
+              displayName: 'Create API Azure App Service resource and configure image'
+              inputs:
+                azureSubscription: '$(ConnectedServiceName)'
+                scriptType: 'bash'
+                scriptLocation: 'inlineScript'
+                inlineScript: |
+                  # Check if API App Service already exists
+                  if ! az webapp list --query "[?name=='$(backAppServiceQA)' && resourceGroup=='$(ResourceGroupName)'] | length(@)" -o tsv | grep -q '^1$'; then
+                    echo "API App Service doesn't exist. Creating new..."
+                    # Create App Service without specifying container image
+                    az webapp create --resource-group $(ResourceGroupName) --plan $(AppServicePlanLinux) --name $(backAppServiceQA) --deployment-container-image-name "nginx"  # Especifica una imagen temporal para permitir la creación
+                  else
+                    echo "API App Service already exists. Updating image..."
+                  fi
 
-              # Configure App Service to use Azure Container Registry (ACR)
-              az webapp config container set --name $(backAppServiceQA) --resource-group $(ResourceGroupName) \
-                --container-image-name $(acrLoginServer)/$(backImageName):$(backImageTag) \
-                --container-registry-url https://$(acrLoginServer) \
-                --container-registry-user $(acrName) \
-                --container-registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv)
-              # Set environment variables
-              az webapp config appsettings set --name $(backAppServiceQA) --resource-group $(ResourceGroupName) \
-                --settings DBCONNSTRING="$(connection_string_qa)" \
+                  # Configure App Service to use Azure Container Registry (ACR)
+                  az webapp config container set --name $(backAppServiceQA) --resource-group $(ResourceGroupName) \
+                    --container-image-name $(acrLoginServer)/$(backImageName):$(backImageTag) \
+                    --container-registry-url https://$(acrLoginServer) \
+                    --container-registry-user $(acrName) \
+                    --container-registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv)
+                  # Set environment variables
+                  az webapp config appsettings set --name $(backAppServiceQA) --resource-group $(ResourceGroupName) \
+                    --settings DBCONNSTRING="$(connection_string_qa)" \
 
 # -------------------------------------------------------------------------------
 # |               DEPLOY FRONT TO AZURE APP SERVICE                             |
 # -------------------------------------------------------------------------------
-    - job: DeployFrontImageToAppServiceQA
+    - deployment: DeployFrontImageToAppServiceQA
       displayName: 'Deploy Front to Azure App Service (QA)'
       pool:
         vmImage: 'ubuntu-latest'
-      steps:
-        - task: AzureCLI@2
-          displayName: 'Create Front Azure App Service resource and configure image'
-          inputs:
-            azureSubscription: '$(ConnectedServiceName)'
-            scriptType: 'bash'
-            scriptLocation: 'inlineScript'
-            inlineScript: |
-              # Check if API App Service already exists
-              if ! az webapp list --query "[?name=='$(frontAppServiceQA)' && resourceGroup=='$(ResourceGroupName)'] | length(@)" -o tsv | grep -q '^1$'; then
-                echo "Front App Service doesn't exist. Creating new..."
-                # Create App Service without specifying container image
-                az webapp create --resource-group $(ResourceGroupName) --plan $(AppServicePlanLinux) --name $(frontAppServiceQA) --deployment-container-image-name "nginx"  # Especifica una imagen temporal para permitir la creación
-              else
-                echo "API App Service already exists. Updating image..."
-              fi
+      environment: 'qa'
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+            - task: AzureCLI@2
+              displayName: 'Create Front Azure App Service resource and configure image'
+              inputs:
+                azureSubscription: '$(ConnectedServiceName)'
+                scriptType: 'bash'
+                scriptLocation: 'inlineScript'
+                inlineScript: |
+                  # Check if API App Service already exists
+                  if ! az webapp list --query "[?name=='$(frontAppServiceQA)' && resourceGroup=='$(ResourceGroupName)'] | length(@)" -o tsv | grep -q '^1$'; then
+                    echo "Front App Service doesn't exist. Creating new..."
+                    # Create App Service without specifying container image
+                    az webapp create --resource-group $(ResourceGroupName) --plan $(AppServicePlanLinux) --name $(frontAppServiceQA) --deployment-container-image-name "nginx"  # Especifica una imagen temporal para permitir la creación
+                  else
+                    echo "API App Service already exists. Updating image..."
+                  fi
 
-              # Configure App Service to use Azure Container Registry (ACR)
-              az webapp config container set --name $(frontAppServiceQA) --resource-group $(ResourceGroupName) \
-                --container-image-name $(acrLoginServer)/$(frontImageName):$(frontImageTag) \
-                --container-registry-url https://$(acrLoginServer) \
-                --container-registry-user $(acrName) \
-                --container-registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv)
-              # Set environment variables
-              az webapp config appsettings set --name $(frontAppServiceQA) --resource-group $(ResourceGroupName) \
-                --settings API_URL="$(api_url_qa)" \
+                  # Configure App Service to use Azure Container Registry (ACR)
+                  az webapp config container set --name $(frontAppServiceQA) --resource-group $(ResourceGroupName) \
+                    --container-image-name $(acrLoginServer)/$(frontImageName):$(frontImageTag) \
+                    --container-registry-url https://$(acrLoginServer) \
+                    --container-registry-user $(acrName) \
+                    --container-registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv)
+                  # Set environment variables
+                  az webapp config appsettings set --name $(frontAppServiceQA) --resource-group $(ResourceGroupName) \
+                    --settings API_URL="$(api_url_qa)" \
 
 # -------------------------------------------------------------------------------
 # |           RUN INTEGRATION TESTS ON AZURE APP SERVICES                       |
